--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,6 +28,9 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+      
+    - name: Grant execute permission to gradlew
+      run: chmod +x ./gradlew
         
     - name: Build project
       run: ./gradlew build
