--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,6 +31,17 @@ jobs:
       
     - name: Grant execute permission to gradlew
       run: chmod +x ./gradlew
+      
+    - name: Clean Gradle cache
+      run: ./gradlew clean
         
     - name: Build project
-      run: ./gradlew build
+      run: ./gradlew build -Dorg.gradle.project.snapshot=true
+      
+    - name: Test with Gradle
+      run: ./gradlew test
+    - name: Publish artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: my-artifact
+        path: build/libs/*.jar
