--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,17 +1,17 @@
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
+# separate terms of service, privacy policy, and support 
 # documentation.
 # This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
 
-name: Java CI with Gradle
+name: Java CI with Gradle  
 
-on:
+on: 
   push:
     branches: [ "main" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "main" ] 
 
 permissions:
   contents: read
@@ -34,14 +34,35 @@ jobs:
       
     - name: Clean Gradle cache
       run: ./gradlew clean
-        
-    - name: Build project
-      run: ./gradlew build -Dorg.gradle.project.snapshot=true
       
     - name: Test with Gradle
       run: ./gradlew test
+      
+    - name: Build project
+      run: ./gradlew build -Dorg.gradle.project.snapshot=true        
+
     - name: Publish artifact
       uses: actions/upload-artifact@v2
       with:
         name: my-artifact
         path: build/libs/*.jar
+        
+    - name: Archive Test Results
+      uses: actions/upload-artifact@v2
+      with:
+        name: test-results
+        path: build/reports/tests/test/
+  
+    - name: Download Test Results
+      uses: actions/download-artifact@v2
+      with:
+        name: test-results
+        path: test-results
+    
+    - name: Publish Test Results as Github Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.TOKEN }}
+        publish_dir: ./test-results/
+
+
