--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,6 +38,14 @@ jobs:
     - name: Test with Gradle
       run: ./gradlew test
       
+    - name: Install dependencies
+      run:
+         cd core-module
+         npm install --prefix /plugins
+         
+    - name: Build project
+      run: npm run build --prefix ./plugins
+      
     - name: Build project
       run: ./gradlew build -Dorg.gradle.project.snapshot=true        
 
