--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,8 +40,8 @@ jobs:
       
     - name: Install dependencies
       run:
-         cd core-module
-         npm install --prefix /plugins
+         cd core-module && npm install --prefix /plugins
+
          
     - name: Build project
       run: npm run build --prefix ./plugins
