--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,7 +40,7 @@ jobs:
       
     - name: Install dependencies
       run:
-         cd core-module && npm install --prefix /plugins
+         cd plugins && npm install --prefix /plugins
 
          
     - name: Build project
