--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,11 +40,8 @@ jobs:
       
     - name: Install dependencies
       run:
-         cd plugins && npm install --prefix /plugins
+         cd plugins && npm install --prefix ./plugins
 
-         
-    - name: Build project
-      run: npm run build --prefix ./plugins
       
     - name: Build project
       run: ./gradlew build -Dorg.gradle.project.snapshot=true        
