--- a/.classpath
+++ b/.classpath
@@ -19,5 +19,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
+	<classpathentry kind="lib" path="C:/Users/Nicol/git/core-module8/bin/main/trackerImp"/>
 	<classpathentry kind="output" path="bin/default"/>
 </classpath>
