--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry excluding="directoriesMock/|directoriesMock/|directoriesMock/" kind="src" output="bin/test" path="src/test/java">
+	<classpathentry excluding="directoriesMock/|directoriesMock/|directoriesMock/fuenteSimple/|directoriesMock/multiplesFuentes/" kind="src" output="bin/test" path="src/test/java">
 		<attributes>
 			<attribute name="test" value="true"/>
 			<attribute name="gradle_scope" value="test"/>
@@ -27,6 +27,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.buildship.core.gradleclasspathcontainer"/>
 	<classpathentry kind="lib" path="plugins"/>
-	<classpathentry kind="lib" path="src/test/java/directoriesMock"/>
+	<classpathentry kind="lib" path="src/test/java/directoriesMock/fuenteSimple"/>
+	<classpathentry kind="lib" path="src/test/java/directoriesMock/multiplesFuentes"/>
 	<classpathentry kind="output" path="bin/default"/>
 </classpath>
