--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,6 +38,8 @@ jobs:
     - name: Test with Gradle
       run: ./gradlew test
 
+    - name: Install dependencies
+      run: npm install --prefix ./src/test/java/directoriesMock
 
       
     - name: Build project
