--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ plugins {
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
+    flatDir {
+        dirs 'src/test/java/directoriesMock'
+    }
 }
 
 dependencies {
