--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -39,6 +39,8 @@ jobs:
       
     - name: Test with Gradle
       run: ./gradlew test
+      env:
+        CLASSPATH: ./src/test/java/directoriesMock/multiplesFuentes/*
 
 
 
