--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,10 +1,3 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support 
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
-
 name: Java CI with Gradle  
 
 on: 
@@ -22,9 +15,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v2
     - name: Set up JDK 11
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v2
       with:
         java-version: '11'
         distribution: 'temurin'
@@ -40,13 +33,12 @@ jobs:
     - name: Test with Gradle
       run: ./gradlew test
       env:
-        CLASSPATH: ./src/test/java/directoriesMock/*
-
+        CLASSPATH: ./src/test/java
 
 
       
     - name: Build project
-      run: ./gradlew build -Dorg.gradle.project.snapshot=true        
+      run: ./gradlew assemble -Dorg.gradle.project.snapshot=true        
 
     - name: Publish artifact
       uses: actions/upload-artifact@v2
@@ -71,4 +63,3 @@ jobs:
       with:
         github_token: ${{ secrets.TOKEN }}
         publish_dir: ./test-results/
-
