--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,7 +19,7 @@ jobs:
     - name: Set up JDK 18
       uses: actions/setup-java@v2
       with:
-        java-version: '11'
+        java-version: '18'
         distribution: 'temurin'
       
     - name: Grant execute permission to gradlew
@@ -31,7 +31,7 @@ jobs:
     - name: Setup dependencies directory
       run: |
         mkdir -p libs
-        cp -r src/test/java/directoriesMock/multiplesFuentes/ libs/
+        cp -r src/test/java/directoriesMock/multiplesFuentes/ lib/
       
     - name: Test with Gradle
       run: ./gradlew test
