--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,43 +1,67 @@
-name: Java CI with Gradle
+name: Java CI with Gradle  
 
-on:
+on: 
   push:
-    branches:
-      - main
+    branches: [ "main" ]
   pull_request:
-    branches:
-      - main
+    branches: [ "main" ] 
+
+permissions:
+  contents: read
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
+    - uses: actions/checkout@v2
+    - name: Set up JDK 18
+      uses: actions/setup-java@v2
+      with:
+        java-version: '18'
+        distribution: 'temurin'
+      
+    - name: Grant execute permission to gradlew
+      run: chmod +x ./gradlew
+      
+    - name: Clean Gradle cache
+      run: ./gradlew clean
+      
+    - name: Setup dependencies directory
+      run: |
+        mkdir -p libs
+        cp -r src/test/java/directoriesMock/multiplesFuentes/ lib/
+      
+    - name: Test with Gradle
+      run: ./gradlew test
 
-      - name: Set up JDK 18
-        uses: actions/setup-java@v2
-        with:
-          java-version: 18
 
-      - name: Grant execute permission to gradlew
-        run: chmod +x ./gradlew
 
-      - name: Clean Gradle cache
-        run: ./gradlew clean
+      
+    - name: Build project
+      run: ./gradlew assemble -Dorg.gradle.project.snapshot=true        
 
-      - name: Build and test with Gradle
-        run: ./gradlew build
-
-      - name: Archive test results
-        uses: actions/upload-artifact@v2
-        with:
-          name: test-results
-          path: build/test-results
-
-      - name: Publish artifact
-        uses: actions/upload-artifact@v2
-        with:
-          name: my-artifact
-          path: build/libs/*.jar
+    - name: Publish artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: my-artifact
+        path: build/libs/*.jar
+        
+    - name: Archive Test Results
+      uses: actions/upload-artifact@v2
+      with:
+        name: test-results
+        path: build/reports/tests/test/
+  
+    - name: Download Test Results
+      uses: actions/download-artifact@v2
+      with:
+        name: test-results
+        path: test-results
+    
+    - name: Publish Test Results as Github Pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{ secrets.TOKEN }}
+        publish_dir: ./test-results/
