--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,8 @@
 plugins {
     id 'java-library'
+    id 'maven-publish'
 }
 
-java {
-    sourceCompatibility = JavaVersion.VERSION_17
-    targetCompatibility = JavaVersion.VERSION_17
-}
 
 repositories {
     mavenCentral()
