--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,14 @@
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry excluding="directoriesMock/|directoriesMock/|directoriesMock/fuenteSimple/|directoriesMock/multiplesFuentes/|directoriesMock/|directoriesMock/fuenteSimple/|directoriesMock/multiplesFuentes/|directoriesMock/fuenteSimple/|directoriesMock/multiplesFuentes/" kind="src" output="bin/test" path="src/test/java">
+	<classpathentry excluding="directoriesMock/|directoriesMock/|directoriesMock/fuenteSimple/|directoriesMock/multiplesFuentes/|directoriesMock/|directoriesMock/fuenteSimple/|directoriesMock/multiplesFuentes/|directoriesMock/fuenteSimple/|directoriesMock/multiplesFuentes/|multiplesFuentes/|multiplesFuentes/|directoriesMock/multiplesFuentes/" kind="src" output="bin/test" path="src/test/java">
+		<attributes>
+			<attribute name="test" value="true"/>
+			<attribute name="gradle_scope" value="test"/>
+			<attribute name="gradle_used_by_scope" value="test"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="src" output="bin/test" path="src/test/resources">
 		<attributes>
 			<attribute name="test" value="true"/>
 			<attribute name="gradle_scope" value="test"/>
@@ -18,8 +25,8 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="lib" path="plugins"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="lib" path="src/test/java/directoriesMock/fuenteSimple"/>
 	<classpathentry kind="lib" path="src/test/java/directoriesMock/multiplesFuentes"/>
 	<classpathentry kind="output" path="bin/default"/>
