--- a/build.gradle
+++ b/build.gradle
@@ -1,21 +1,32 @@
 plugins {
+    // Apply the java-library plugin for API and implementation separation.
     id 'java-library'
-    id 'maven-publish'
+}
+
+tasks.withType(Test) {
+    jvmArgs(['-XX:+UseG1GC', '-XX:+TieredCompilation'])
+    systemProperty 'java.version', '18'
 }
 
 
 repositories {
+    // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.apache.commons:commons-math3:3.6.1'
+    // Use JUnit Jupiter for testing.
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    // This dependency is exported to consumers, that is to say found on their compile classpath.
+    api 'org.apache.commons:commons-math3:3.6.1'
+    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:30.1.1-jre'
-    testImplementation files('src/test/java/directoriesMock/fuenteSimple')
-    testImplementation files('src/test/java/directoriesMock/multiplesFuentes')
+    // Add dependency from local directory
+    testImplementation files('src/test/java/directoriesMock/multiplesFuentes/')
+    testImplementation files('plugins/')
 }
 
-test {
+tasks.named('test') {
+    // Use JUnit Platform for unit tests.
     useJUnitPlatform()
 }
