--- a/.classpath
+++ b/.classpath
@@ -13,21 +13,14 @@
 			<attribute name="gradle_used_by_scope" value="test"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="src" output="bin/test" path="src/test/resources">
-		<attributes>
-			<attribute name="test" value="true"/>
-			<attribute name="gradle_scope" value="test"/>
-			<attribute name="gradle_used_by_scope" value="test"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17/">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="plugins"/>
+	<classpathentry exported="true" kind="lib" path="plugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="src/test/java/directoriesMock/fuenteSimple"/>
-	<classpathentry kind="lib" path="src/test/java/directoriesMock/multiplesFuentes"/>
+	<classpathentry exported="true" kind="lib" path="src/test/java/directoriesMock/fuenteSimple"/>
+	<classpathentry exported="true" kind="lib" path="src/test/java/directoriesMock/multiplesFuentes"/>
 	<classpathentry kind="output" path="bin/default"/>
 </classpath>
