--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,7 @@
 			<attribute name="gradle_used_by_scope" value="main,test"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry excluding="directoriesMock/|directoriesMock/|directoriesMock/fuenteSimple/|directoriesMock/multiplesFuentes/|directoriesMock/|directoriesMock/fuenteSimple/|directoriesMock/multiplesFuentes/|directoriesMock/fuenteSimple/|directoriesMock/multiplesFuentes/|multiplesFuentes/|multiplesFuentes/|directoriesMock/multiplesFuentes/" kind="src" output="bin/test" path="src/test/java">
+	<classpathentry excluding="directoriesMock/|directoriesMock/|directoriesMock/fuenteSimple/|directoriesMock/multiplesFuentes/|directoriesMock/|directoriesMock/fuenteSimple/|directoriesMock/multiplesFuentes/|directoriesMock/fuenteSimple/|directoriesMock/multiplesFuentes/|multiplesFuentes/|multiplesFuentes/|directoriesMock/multiplesFuentes/|pluginMock/" kind="src" output="bin/test" path="src/test/java">
 		<attributes>
 			<attribute name="test" value="true"/>
 			<attribute name="gradle_scope" value="test"/>
@@ -18,9 +18,10 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="plugins"/>
+	<classpathentry kind="lib" path="plugins"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry exported="true" kind="lib" path="src/test/java/directoriesMock/fuenteSimple"/>
-	<classpathentry exported="true" kind="lib" path="src/test/java/directoriesMock/multiplesFuentes"/>
+	<classpathentry kind="lib" path="src/test/java/directoriesMock/fuenteSimple"/>
+	<classpathentry kind="lib" path="src/test/java/directoriesMock/multiplesFuentes"/>
+	<classpathentry kind="lib" path="src/test/java/pluginMock"/>
 	<classpathentry kind="output" path="bin/default"/>
 </classpath>
