arreglando discovery y refactorizando

--- a/bin/main/.gitignore
+++ b/bin/main/.gitignore
@@ -1,3 +1,8 @@
-/coreInicialization/
 /imp/
+/DefaultTS.class
+/TSExistente.class
+/TSInexistente.class
+/coreInicialization/
+/Interfaces/
+/core/
 /breaker/
