--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,7 @@ dependencies {
     api 'org.apache.commons:commons-math3:3.6.1'
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     implementation 'com.google.guava:guava:30.1.1-jre'
+    implementation group: 'com.google.code.gson', name: 'gson', version: '2.7'
     // Add dependency from local directory
     testImplementation files('src/test/java/directoriesMock/multiplesFuentes/')
     testImplementation files('plugins/')
