--- a/bin/main/.gitignore
+++ b/bin/main/.gitignore
@@ -1,5 +1,4 @@
+/DefaultTS.class
+/TSExistente.class
+/TSInexistente.class
 /TSWithCategories.class
-/BadgeTS.class
-/coreInicialization/
-/breaker/
-/core/
