--- a/.classpath
+++ b/.classpath
@@ -25,9 +25,9 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
-	<classpathentry kind="lib" path="plugins"/>
-	<classpathentry kind="lib" path="src/test/java/directoriesMock/fuenteSimple"/>
-	<classpathentry kind="lib" path="src/test/java/directoriesMock/multiplesFuentes"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry exported="true" kind="lib" path="plugins"/>
+	<classpathentry exported="true" kind="lib" path="src/test/java/directoriesMock/fuenteSimple"/>
+	<classpathentry exported="true" kind="lib" path="src/test/java/directoriesMock/multiplesFuentes"/>
 	<classpathentry kind="output" path="bin/default"/>
 </classpath>
